removed a overflow bug

--- a/Frontend/client/app/globals.css
+++ b/Frontend/client/app/globals.css
@@ -122,6 +122,7 @@ body {
   font-family: "Wellfleet";
   font-weight: 400;
   font-style: normal;
+  overflow-x: hidden;
 }
 
 @layer base {
@@ -135,4 +136,3 @@ body {
     @apply font-sans;
   }
 }
-
